<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <Button
                android:id="@+id/mainUsageBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tts_main_usage" />

            <Button
                android:id="@+id/autoPlayUsageBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tts_autoplay"
                android:layout_marginBottom="30dp"/>

            <Button
                android:id="@+id/pulseUsageBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pulse" />

            <Button
                android:id="@+id/pulseSlidingUsageBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pulse_sliding" />

            <Button
                android:id="@+id/pulseAutoPlayUsageBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pulse_autoplay" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>